RESOLVED FIXED46024
Canvas sizing ignores intrinsic size
https://bugs.webkit.org/show_bug.cgi?id=46024
Summary Canvas sizing ignores intrinsic size
mitz
Reported 2010-09-17 18:26:48 PDT
Patch forthcoming.
Attachments
Patch (15.64 KB, patch)
2010-09-17 18:43 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2010-09-17 18:43:17 PDT
WebKit Review Bot
Comment 2 2010-09-17 18:45:33 PDT
Attachment 67990 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/rendering/RenderReplaced.cpp:263: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] WebCore/rendering/RenderReplaced.cpp:264: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2010-09-17 18:51:06 PDT
Comment on attachment 67990 [details] Patch r=me, some comments on irc.
Csaba Osztrogonác
Comment 5 2010-09-20 07:57:46 PDT
Note You need to log in before you can comment on or make changes to this bug.